# InformationRetrievalSystems

./: README.md  compose.yml  default.conf  nginx.conf
analysis/: .gitignore  Pipfile  README.md  benchmark_elasticsearch.py  benchmark_typesense.py  compare.py  docker_destroy.sh  docker_up.sh  elasticsearch.yml  metrics.py  prepare_elastic.py  prepare_typesense.py  requirements.txt  test.py
backend/: Dockerfile  _setup_bases.py  pyproject.toml
backend/arxivsearch/: __init__.py  categories.csv  config.py  logger.py
backend/arxivsearch/database/: __init__.py  arxiv.py  helpers.py
backend/arxivsearch/elastic/: __init__.py
backend/arxivsearch/routes/: __init__.py  categories.py  health.py  models.py  search.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  svelte.config.js  tailwind.config.ts
frontend/src/components/: DoubleRangeSlider.svelte  index.ts
frontend/src/lib/: helpers.ts  index.ts  response.ts  subjects.ts  types.ts
frontend/src/lib/components/custom/facets/: facets.svelte  index.ts
frontend/src/lib/components/custom/paper/: index.ts  paper.svelte
frontend/src/lib/components/custom/search/: index.ts  search.svelte
frontend/src/lib/components/custom/year-chart/: index.ts  year-chart.svelte
frontend/src/lib/utils/: clamp.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/search/: +page.svelte  +page.ts
